--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* ==================== Global ==================== */
-body{
+body {
     background: url(../assets/img/bg.jpg);
     background-size: cover;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
-.container{
+.container {
     height: 100vh;
     width: min(85vw, 800px);
     position: relative;
@@ -19,7 +19,7 @@ body{
 
 /* ==================== Painel ==================== */
 
-.painel-inferior{
+.painel-inferior {
     position: absolute;
     width: 190px;
     padding: 10px;
@@ -27,37 +27,37 @@ body{
     bottom: 0;
     border-top: solid 1px #fff;
     background: #fff;
-    opacity: .7
+    opacity: 0.7;
 }
 
-.vidas{
+.vidas {
     float: left;
 }
 
-.cronometro{
+.cronometro {
     float: left;
     font-size: 1.2rem;
 }
 
-
 /* ==================== Imagens Mosquito ==================== */
-.mosquito1, .mosquito2, .mosquito3{
+.mosquito1,
+.mosquito2,
+.mosquito3 {
     position: absolute;
 }
-.mosquito1{
+.mosquito1 {
     width: 50px;
     height: 50px;
 }
-.mosquito2{
+.mosquito2 {
     width: 70px;
     height: 70px;
 }
-.mosquito3{
+.mosquito3 {
     width: 90px;
     height: 90px;
 }
 
-.ladoB{
-    transform: scaleX(-1);   
+.ladoB {
+    transform: scaleX(-1);
 }
-
