:checkered_flag: Aplicacao Finalizada :checkered_flag:

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* ==================== Global ==================== */
+html{
+    cursor: url(../assets/img/mata_mosquito.png) 30 30, auto;
+}
+
 body {
     background: url(../assets/img/bg.jpg);
     background-size: cover;
